--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-        "deploy": "vite build && gh-pages -d dist"
+		"deploy": "vite build && gh-pages -d dist"
 	},
 	"dependencies": {
 		"@dnd-kit/core": "^6.1.0",
@@ -43,6 +43,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
+		"gh-pages": "^6.3.0",
 		"input-otp": "^1.2.4",
 		"lucide-react": "^0.446.0",
 		"react": "^18.3.1",
